# buildllm

./: pyproject.toml  run.py
.github/workflows/: ph2-qlora-finetunning.yml
_learning/: pytorch.ipynb
notebooks/: 03.CodeLLM-Stage1-Attention.ipynb  09.GPT-2-small-model.ipynb
notebooks/finetunning/: 05.peft-lora-demo-sentiment-analysis.ipynb  08.peft-qlora-demo-customized-response.ipynb
notebooks/llm_build_old/: 00.Tranformers.ipynb  01.LLM Models.ipynb  02.CodeLLM-Stage1-Preprocessing.ipynb  03.CodeLLM-Stage1-Attention.ipynb
notebooks/llmbuild/: 00.Tranformers.ipynb  01.llm.ipynb  02.CodeLLM-Stage1-Preprocessing.ipynb  03.CodeLLM-Stage1-Attention.ipynb  04.CodeLLM-Stage1-LLMArchitecture.ipynb  05.CodeLLM-Stage2-TrainingLoop.ipynb  gpt2.ipynb  llm_simplified.ipynb  temp.ipynb
notebooks/pytorch/: 01.pytorch.ipynb  02.pytorch_benefits.ipynb  03.linear_regression.ipynb  04.logistic_regression.ipynb
src/: pre_processing.py
src/ph2-qlora-finetunning/: kubeflow.py  requirements.txt  train-in-git.py  train.py
